# comfyui_GLM_TTS

./: .gitignore  LICENSE  README.md  README_zh.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
glmtts_src/: asr_verify_example_zh.py
glmtts_src/cosyvoice/cli/: frontend.py
glmtts_src/examples/prompt/: LICENSE
glmtts_src/utils/: hift_util.py
